hard-gists/3018bf3643f80798bde75c17571a38a9/run.log
=== Docker Run Log for 3018bf3643f80798bde75c17571a38a9 ===
Started at: Mi 29. Okt 13:37:05 CET 2025

[2025-10-29 13:37:06] START: Running container for 3018bf3643f80798bde75c17571a38a9
[2025-10-29 13:37:06] SUCCESS: Container be8cd1bbe82716084c5693c7220a2afe450f9d7c1d9c458890d90a19fdfef321 started for 3018bf3643f80798bde75c17571a38a9
=== Container logs for 3018bf3643f80798bde75c17571a38a9 ===
  File "/snippet.py", line 144
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3018bf3643f80798bde75c17571a38a9 ===
[2025-10-29 13:37:08] INFO: Container be8cd1bbe82716084c5693c7220a2afe450f9d7c1d9c458890d90a19fdfef321 has stopped
